implement changes from review of pull request