@@ -22,7 +22,6 @@ import io.camunda.client.CamundaClient;
 import io.camunda.process.test.api.CamundaProcessTest;
 import io.camunda.process.test.api.CamundaProcessTestContext;
 import java.time.Duration;
-import java.util.Collections;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -52,9 +51,11 @@ public class ProcessNestedUnitTest {
       // given
       final String shippingId = "shipping-1";
 
-      completeJobs("collect-money", Collections.emptyMap());
-      completeJobs("fetch-items", Collections.emptyMap());
-      completeJobs("ship-parcel", Map.of("shipping_id", shippingId));
+      processTestContext.mockJobWorker("collect-money").thenComplete();
+      processTestContext.mockJobWorker("fetch-items").thenComplete();
+      processTestContext
+          .mockJobWorker("ship-parcel")
+          .thenComplete(Map.of("shipping_id", shippingId));
 
       final var processInstance =
           client
@@ -93,10 +94,12 @@ public class ProcessNestedUnitTest {
       // given
       final String shippingId = "shipping-2";
 
-      completeJobs("collect-money", Collections.emptyMap());
-      completeJobs("fetch-items", Collections.emptyMap());
-      completeJobs("ship-parcel", Map.of("shipping_id", shippingId));
-      completeJobs("request-tracking-code", Collections.emptyMap());
+      processTestContext.mockJobWorker("collect-money").thenComplete();
+      processTestContext.mockJobWorker("fetch-items").thenComplete();
+      processTestContext
+          .mockJobWorker("ship-parcel")
+          .thenComplete(Map.of("shipping_id", shippingId));
+      processTestContext.mockJobWorker("request-tracking-code").thenComplete();
 
       final var processInstance =
           client
@@ -118,14 +121,5 @@ public class ProcessNestedUnitTest {
           .hasActiveElements(byName("Received tracking code"))
           .isActive();
     }
-
-  }
-
-  private void completeJobs(final String jobType, final Map<String, Object> variables) {
-    client
-        .newWorker()
-        .jobType(jobType)
-        .handler((jobClient, job) -> jobClient.newCompleteCommand(job).variables(variables).send())
-        .open();
   }
 }
